Check in all these ui changes

--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <link
-      rel="preload"
-      as="font"
-      href="./fonts/Inter-Variable.ttf"
-      type="font/ttf"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      as="font"
-      href="./fonts/tiemposDispMed.woff2"
-      type="font/woff2"
-      crossorigin="anonymous"
-    />
+
     <!-- Primary Meta Tags -->
     <title>Balancer</title>
     <meta name="title" content="Balancer" />
@@ -42,15 +29,15 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://app.balancer.fi/" />
-    <meta property="twitter:title" content="Balancer" />
+    <meta property="twitter:url" content="https://app.mistral.fi/" />
+    <meta property="twitter:title" content="Mistral" />
     <meta
       property="twitter:description"
       content="Automated portfolio manager and trading platform"
     />
     <meta
       property="twitter:image"
-      content="https://balancer.fi/images/og_image.jpg"
+      content="https://Mistral.fi/images/og_image.jpg"
     />
 
     <!-- Fathom Analytics -->
@@ -60,6 +47,15 @@
       data-site="<%= VITE_FATHOM_SITE_ID %>"
       defer
     ></script>
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/ish8obv.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
